@@ -1,6 +1,20 @@
 <h1 class="pageTitle">{translate(pageTitle)}</h1>
 <span flexy:if="msgGet()">{msgGet()}</span>
 
+<form name="checkLatestVersion" action="" method="post" id="checkLatestVersion" flexy:ignore>
+    <fieldset>
+        <legend>{translate(#Check for Latest Version#)}</legend>
+        <table>
+            <tr>
+                <td>
+                    <input type="hidden" name="action" value="checkLatestVersion" />
+                    <input type="submit" name="checkLatestVersion" value="{translate(#Check Now#)}" />
+                </td>
+            </tr>
+        </table>
+    </fieldset>
+</form>
+
 <form name="translations" action="" method="post" id="translations" flexy:ignore>
     <fieldset>
         <legend>{translate(#Manage Translations#)}</legend>
@@ -9,15 +23,15 @@
                 <td><select name="frmCurrentModule">{generateSelect(aModules,currentModule):h}</select>
                     <select name="frmCurrentLang">{generateSelect(aLangs,currentLang):h}</select>
                 </td>
-            </tr>        
+            </tr>
             <tr>
                 <td>
                     <div class="error" flexy:if="error[noSelection]">
                         {error[noSelection]}
                     </div>
-                    <input type="radio" name="action" value="verify" flexy:raw="{isValidate}" />{translate(#validate#)} 
-                    <input type="radio" name="action" value="edit" flexy:raw="{isEdit}" />{translate(#edit#)} 
-                    <input type="radio" name="action" value="checkAllModules" />{translate(#check all modules#)} 
+                    <input type="radio" name="action" value="verify" flexy:raw="{isValidate}" />{translate(#validate#)}
+                    <input type="radio" name="action" value="edit" flexy:raw="{isEdit}" />{translate(#edit#)}
+                    <input type="radio" name="action" value="checkAllModules" />{translate(#check all modules#)}
                     <input type="submit" name="submitted" value="{translate(#Process#)}" />
                 </td>
             </tr>
@@ -25,6 +39,7 @@
         </table>
     </fieldset>
 </form>
+
 <form name="dataobjects" method="post" id="dataobjects" flexy:ignore>
     <fieldset>
         <legend>{translate(#Rebuild Data Objects#)}</legend>
@@ -32,7 +47,7 @@
         <table>
             <tr>
                 <td>
-                    <input type="hidden" name="action" value="dbgen" /> 
+                    <input type="hidden" name="action" value="dbgen" />
                     <input type="submit" name="dbgen" value="{translate(#Rebuild Dataobjects Now#)}" />
                 </td>
             </tr>
@@ -47,7 +62,7 @@
         <table>
             <tr>
                 <td>
-                    <input type="hidden" name="action" value="rebuildSequences" /> 
+                    <input type="hidden" name="action" value="rebuildSequences" />
                     <input type="submit" name="submit" value="{translate(#Rebuild Sequences Now#)}" />
                 </td>
             </tr>
